dodalam p imie nazwisko index.html

--- a/indeks.html
+++ b/indeks.html
@@ -45,7 +45,7 @@ To jest miasto ukochane<br>Przez turystów uwielbiane<br>Bardzo często odwiedza
 <li>Zabytki</li>
 <li>Sport</li>
 </ul>
-
+<p>imie nazwisko: dobroslawa Kluzik</p>
 <ol>
 <li>Mapa</li>
 <li>Ciekawe miejsca</li>
