--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ i trzeciorzędowe</td>
 x<sub>1</sub> + x<sub>2</sub> = 100<br>
 Lekcja trwa: 9<sup>20</sup> - 10<sup>05</sup>
 </p>
-<p>II Liceum Ogólnokształcące im. Króla Jana III sobieskiego w Krakowie 2024<br>&copy;Klasa 3a Julian Nowak</p>
+<p>II Liceum Ogólnokształcące im. Króla Jana III sobieskiego w Krakowie 2024<br>&copy;Klasa 3a Dobroslawa Kluzik</p>
 </footer>
 <div id="tp-widget-default" data-city="200122" data-version="2.0.0">
 	<div id="tp-widget-bottom-default">
