--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ Lekcja trwa: 9<sup>20</sup> - 10<sup>05</sup>
 			d.parentNode.appendChild(g);
 		}(document, "script", "tp-widget-script-default"));
 	</script>
-<p>imie nazwisko
+<p>imie nazwisko Dobroslawa Kluzik
 </p>
 </body>
 </html>
