obrazek index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ To jest miasto ukochane<br>Przez turystów uwielbiane<br>Bardzo często odwiedza
       Wisła - polskich rzek królowa!
 </pre>
 <figure>
-<img src="images/krakow.jpg" alt="obrazek krakowa">
+<img src="krakow.jpg" alt="obrazek krakowa">
 </figure>
 <ul>
 <li>Mapa</li>
