--- a/index.html
+++ b/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html lang='pl'>
 <head>
-<title>krakow</title>
-<meta charset="UTF-8">
-<link rel="stylesheet" href="style.css">
+	<title>krakow</title>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body style="background-color: #aff83f;">
 <header>
-<h1 align="center"> Kraków moje miasto </h1>
-<nav>
-<ul>
-<li><a href="index.html">Główna strona</a></li>
-<li><a href="js.html">Java Script</a></li>
-<li><a href="kontakty.html">Kontakty</a></li>
-<li><a href="#footer">footer</a></li>
-</ul>
-</nav>
+	<h1> Kraków moje miasto </h1>
+	<nav>
+		<ul>
+			<li><a href="index.html">Główna strona</a></li>
+			<li><a href="js.html">Java Script</a></li>
+			<li><a href="kontakty.html">Kontakty</a></li>
+			<li><a href="#footer">footer</a></li>
+		</ul>
+	</nav>
 </header>
 <main>
-<h1>krakow moje miasto</h1>
-<h2>krakow moje miasto</h2>
-<h3>krakow moje miasto</h3>
-<h4>krakow moje miasto</h4>
+	<h1>krakow moje miasto</h1>
+	<h2>krakow moje miasto</h2>
+	<h3>krakow moje miasto</h3>
+	<h4>krakow moje miasto</h4>
 
-<p><b>    Kraków</b>, Stołeczne Królewskie Miasto Kraków – miasto na prawach powiatu położone w południowej Polsce nad Wisłą, drugie co do liczby mieszkańców[1].<i> Formalna stolica Polski do 1795 roku</i> i miasto koronacyjne oraz nekropolia królów Polski. Od <u>1000</u> roku nieprzerwanie stolica diecezji krakowskiej (jednej z pięciu w ówczesnej Polsce), a od 1925 archidiecezji i metropolii.</p>
+	<p><b>    Kraków</b>, Stołeczne Królewskie Miasto Kraków – miasto na prawach powiatu położone w południowej Polsce nad Wisłą, drugie co do liczby mieszkańców[1].<i> Formalna stolica Polski do 1795 roku</i> i miasto koronacyjne oraz nekropolia królów Polski. Od <u>1000</u> roku nieprzerwanie stolica diecezji krakowskiej (jednej z pięciu w ówczesnej Polsce), a od 1925 archidiecezji i metropolii.</p>
 <br>
 <hr>
 <h2>Wierszyk o Krakowie - Jedziemy do Krakowa!</h2>
