--- a/index.html
+++ b/index.html
@@ -24,76 +24,78 @@
 	<h4>krakow moje miasto</h4>
 
 	<p><b>    Kraków</b>, Stołeczne Królewskie Miasto Kraków – miasto na prawach powiatu położone w południowej Polsce nad Wisłą, drugie co do liczby mieszkańców[1].<i> Formalna stolica Polski do 1795 roku</i> i miasto koronacyjne oraz nekropolia królów Polski. Od <u>1000</u> roku nieprzerwanie stolica diecezji krakowskiej (jednej z pięciu w ówczesnej Polsce), a od 1925 archidiecezji i metropolii.</p>
-<br>
-<hr>
-<h2>Wierszyk o Krakowie - Jedziemy do Krakowa!</h2>
-<p>Wisła - polskich rzek królowa<br>Od lat płynie wzdłuż Krakowa<br>Sto tajemnic w sobie chowa<br>Wisła - polskich rzek królowa!<br><br><br>
-To jest miasto ukochane<br>Przez turystów uwielbiane<br>Bardzo często odwiedzane<br>Moje miasto ukochane!<br>
-</p>
-<pre>
-      Wisła - polskich rzek królowa
-      Od lat płynie wzdłuż
-      Krakowa Sto tajemnic w sobie chowa
-      Wisła - polskich rzek królowa!
-</pre>
-<figure>
-<img src="krakow.jpg" alt="obrazek krakowa">
-</figure>
-<ul>
-<li>Mapa</li>
-<li>Ciekawe miejsca</li>
-<li>Zabytki</li>
-<li>Sport</li>
-</ul>
-<p>imie nazwisko: dobroslawa Kluzik</p>
-<ol>
-<li>Mapa</li>
-<li>Ciekawe miejsca</li>
-<li>Zabytki</li>
-<li>Sport</li>
-</ol>
-<div id="tp-widget-default" data-city="200122" data-version="2.0.0">
-	<div id="tp-widget-bottom-default">
-		<a id="tp-widget-flink-default" href="https://www.twojapogoda.pl/prognoza-godzinowa-polska/malopolskie-krakow/" target="_blank" rel="nofollow" title="Kraków - prognoza godzinowa">Godzina po godzinie</a>
-		<a id="tp-widget-flink-second" href="https://www.twojapogoda.pl/prognoza-16dni-polska/malopolskie-krakow/" target="_blank" rel="nofollow" title="Kraków - prognoza na 16 dni">Na 16 dni</a>
-		<a id="tp-widget-mlink-default" href="https://www.twojapogoda.pl" target="_blank" rel="nofollow" title="TwojaPogoda.pl - Pogoda w Polsce i na świecie - pogoda na 16 dni"></a>
+	<br>
+	<hr>
+	<h2>Wierszyk o Krakowie - Jedziemy do Krakowa!</h2>
+	<p>Wisła - polskich rzek królowa<br>Od lat płynie wzdłuż Krakowa<br>Sto tajemnic w sobie chowa<br>Wisła - polskich rzek królowa!<br><br><br>
+	To jest miasto ukochane<br>Przez turystów uwielbiane<br>Bardzo często odwiedzane<br>Moje miasto ukochane!<br>
+	</p>
+	<pre>
+     	 Wisła - polskich rzek królowa
+     	 Od lat płynie wzdłuż
+     	 Krakowa Sto tajemnic w sobie chowa
+     	 Wisła - polskich rzek królowa!
+	</pre>
+	<figure>
+		<img src="krakow.jpg" alt="obrazek krakowa">
+	</figure>
+	<ul>
+		<li>Mapa</li>
+		<li>Ciekawe miejsca</li>
+		<li>Zabytki</li>
+		<li>Sport</li>
+	</ul>
+	<p>imie nazwisko: dobroslawa Kluzik</p>
+	<ol>
+		<li>Mapa</li>
+		<li>Ciekawe miejsca</li>
+		<li>Zabytki</li>
+		<li>Sport</li>
+	</ol>
+	<div id="tp-widget-default" data-city="200122" data-version="2.0.0">
+		<div id="tp-widget-bottom-default">
+			<a id="tp-widget-flink-default" href="https://www.twojapogoda.pl/prognoza-godzinowa-polska/malopolskie-krakow/" target="_blank" rel="nofollow" title="Kraków - prognoza godzinowa">Godzina po godzinie</a>
+			<a id="tp-widget-flink-second" href="https://www.twojapogoda.pl/prognoza-16dni-polska/malopolskie-krakow/" target="_blank" rel="nofollow" title="Kraków - prognoza na 16 dni">Na 16 dni</a>
+			<a id="tp-widget-mlink-default" href="https://www.twojapogoda.pl" target="_blank" rel="nofollow" title="TwojaPogoda.pl - Pogoda w Polsce i na świecie - pogoda na 16 dni"></a>
+		</div>
 	</div>
-</div>
-<a href="https://pl.wikipedia.org/wiki/Krak%C3%B3w">Wikipedia</a>
-<table>
-<tr>
-<th>Nazwa rezerwatu</th>
-<th>Powierzchnia</th>
-<th>Przedmiot ochrony</th>
-</tr>
-<tr>
-<td>Bielańskie Skałki</td>
-<td>1,73 ha</td>
-<td>spontaniczne procesy sukcesji biocenoz leśnych na skalistym, dawniej pozbawionym lasu terenie</td>
-</tr>
-<tr>
-<td>Bonarka</td>
-<td>2,29 ha</td>
-<td>rezerwat geologiczny, uskoki geologiczno-tektoniczne, powierzchnie abrazyjne, odsłonięte utwory jurajskie, kredowe
-i trzeciorzędowe</td>
-</tr>
-</table>
+	<a href="https://pl.wikipedia.org/wiki/Krak%C3%B3w">Wikipedia</a>
+	<table>
+		<tr>
+			<th>Nazwa rezerwatu</th>
+			<th>Powierzchnia</th>
+			<th>Przedmiot ochrony</th>
+		</tr>
+		<tr>
+			<td>Bielańskie Skałki</td>
+			<td>1,73 ha</td>
+			<td>spontaniczne procesy sukcesji biocenoz leśnych na skalistym, dawniej pozbawionym lasu terenie</td>
+		</tr>
+		<tr>
+			<td>Bonarka</td>
+			<td>2,29 ha</td>
+			<td>rezerwat geologiczny, uskoki geologiczno-tektoniczne, powierzchnie abrazyjne, odsłonięte utwory jurajskie, kredowe
+i trzeciorzędowe
+			</td>
+		</tr>
+	</table>
 
 </main>
 <footer id="footer">
-<p>
-x<sub>1</sub> + x<sub>2</sub> = 100<br>
-Lekcja trwa: 9<sup>20</sup> - 10<sup>05</sup>
-</p>
-<p>II Liceum Ogólnokształcące im. Króla Jana III sobieskiego w Krakowie 2024<br>&copy;Klasa 3a Dobroslawa Kluzik</p>
+	<p>
+		x<sub>1</sub> + x<sub>2</sub> = 100<br>
+		Lekcja trwa: 9<sup>20</sup> - 10<sup>05</sup>
+	</p>
+	<p>II Liceum Ogólnokształcące im. Króla Jana III sobieskiego w Krakowie 2024<br>&copy;Klasa 3a Dobroslawa Kluzik</p>
 </footer>
-<div id="tp-widget-default" data-city="200122" data-version="2.0.0">
-	<div id="tp-widget-bottom-default">
-		<a id="tp-widget-flink-default" href="https://www.twojapogoda.pl/prognoza-godzinowa-polska/malopolskie-krakow/" target="_blank" rel="nofollow" title="Kraków - prognoza godzinowa">Godzina po godzinie</a>
-		<a id="tp-widget-flink-second" href="https://www.twojapogoda.pl/prognoza-16dni-polska/malopolskie-krakow/" target="_blank" rel="nofollow" title="Kraków - prognoza na 16 dni">Na 16 dni</a>
-		<a id="tp-widget-mlink-default" href="https://www.twojapogoda.pl" target="_blank" rel="nofollow" title="TwojaPogoda.pl - Pogoda w Polsce i na świecie - pogoda na 16 dni"></a>
+	<div id="tp-widget-default" data-city="200122" data-version="2.0.0">
+		<div id="tp-widget-bottom-default">
+			<a id="tp-widget-flink-default" href="https://www.twojapogoda.pl/prognoza-godzinowa-polska/malopolskie-krakow/" target="_blank" rel="nofollow" title="Kraków - prognoza godzinowa">Godzina po godzinie</a>
+			<a id="tp-widget-flink-second" href="https://www.twojapogoda.pl/prognoza-16dni-polska/malopolskie-krakow/" target="_blank" rel="nofollow" title="Kraków - prognoza na 16 dni">Na 16 dni</a>
+			<a id="tp-widget-mlink-default" href="https://www.twojapogoda.pl" target="_blank" rel="nofollow" title="TwojaPogoda.pl - Pogoda w Polsce i na świecie - pogoda na 16 dni"></a>
+		</div>
 	</div>
-	<script type="text/javascript">
+	<script>
 		(function (t, p, w, d, g) {
 			if (t.getElementById(w)) return;
 			d = t.getElementsByTagName(p)[0], g = t.createElement(p);
@@ -101,7 +103,7 @@ Lekcja trwa: 9<sup>20</sup> - 10<sup>05</sup>
 			d.parentNode.appendChild(g);
 		}(document, "script", "tp-widget-script-default"));
 	</script>
-<p>imie nazwisko Dobroslawa Kluzik
-</p>
+	<p>imie nazwisko Dobroslawa Kluzik
+	</p>
 </body>
 </html>
