--- a/kontakty.html
+++ b/kontakty.html
@@ -8,33 +8,34 @@
 	
 </head>
 <body>
-	<form
- 	 action="https://formspree.io/f/mrbgbdvv"
- 	 method="POST"
-	>
+	<main>
+		<form
+ 	 	action="https://formspree.io/f/mrbgbdvv"
+ 	 	method="POST"
+		>
 	
-	<div>
-		<form action="https://formspree.io/f/mrbgbdvv" method="POST">
-    		<label for="fname">First Name</label>
-    		<input type="text" id="fname" name="firstname" placeholder="Your name..">
+		<div>
+			<form action="https://formspree.io/f/mrbgbdvv" method="POST">
+    				<label for="fname">First Name</label>
+    				<input type="text" id="fname" name="firstname" placeholder="Your name..">
 
-    	<label for="lname">Last Name</label>
-    	<input type="text" id="lname" name="lastname" placeholder="Your last name..">
+	    			<label for="lname">Last Name</label>
+	    			<input type="text" id="lname" name="lastname" placeholder="Your last name..">
+	
+	   			<label for="country">Country</label>
+	    			<select id="country" name="country">
+		      			<option value="australia">Australia</option>
+		      			<option value="canada">Canada</option>
+		      			<option value="usa">USA</option>
+	    			</select>
+	  
+			    	<label for="textarea">Write questions or feedback</label>
+				<textarea id="textarea">Some text..</textarea>
+				Enter text here...</textarea>
+				<input type="submit" value="Submit">
 
-   	<label for="country">Country</label>
-    	<select id="country" name="country">
-      		<option value="australia">Australia</option>
-      		<option value="canada">Canada</option>
-      	<option value="usa">USA</option>
-    	</select>
-  
-    	<label for="textarea">Write questions or feedback</label>
-	<textarea id="textarea">Some text..</textarea>
-	Enter text here...</textarea>
-	<input type="submit" value="Submit">
-
-  </form>
-</div>
- 
+ 			</form>
+		</div>
+	</main>
 </body>
 </html>
