--- a/js.html
+++ b/js.html
@@ -79,15 +79,15 @@
         document.addEventListener("click", myFunction)
         //onclick="dodaj()"
         function dodaj() {
-            let liczba1=parseInt(document.getElementById("liczba1").value;)
-            let liczba2=parseInt(document.getElementById("liczba2").value;)
+            let liczba1=parseInt(document.getElementById("liczba1").value);
+            let liczba2=parseInt(document.getElementById("liczba2").value);
             let wynikSum=liczba1+liczba2;
             document.getElementById("wynik").innerHTML=wynikSum;
         } 
         //addEventListener("click", dodajEventListener)
         function dodajEventListener(){
-            let liczba1=parseInt(document.getElementById("liczba1").value;)
-            let liczba2=parseInt(document.getElementById("liczba2").value;)
+            let liczba1=parseInt(document.getElementById("liczba1").value);
+            let liczba2=parseInt(document.getElementById("liczba2").value);
             let wynikSum=liczba1+liczba2;
             document.getElementById("wynik").innerHTML=wynikSum;
         } 
