--- a/js.html
+++ b/js.html
@@ -27,7 +27,7 @@
 		document.write("<h4> I am function write in DOM</h4>")
 		// my function
 		function myWrite(myAttribute){
-		dokument.write(myAttribute);
+		document.write(myAttribute);
 		}
 	   	myWrite("<h1 class='element-h1'>Hello</h1>");
 	        myWrite("<br>");
