--- a/js.html
+++ b/js.html
@@ -43,7 +43,7 @@
 	   	let str="string";
 	   	let bool=true;
 	   	console.log(num);
-	   	concole.log(str);
+	   	console.log(str);
 	   	console.log(bool);
 	   
 	   	//
