--- a/js.html
+++ b/js.html
@@ -56,7 +56,7 @@
 	   	firstNum++;
 	   	console.log(firstNum);
 	   	firstNum--;
-	   	console.log(firstNim);
+	   	console.log(firstNum);
 
 	   	document.write("Wynik dodawania: ", firstNum + secondNum, "<br>");
 	        document.write("Wynik reszta z dzielenia: ", firstNum % secondNum, "<br>");
