--- a/js.html
+++ b/js.html
@@ -76,7 +76,7 @@
 	            document.getElementById("demo").innerHTML += "We clicked!<br>";
 	        }
 	 
-	        document.getElementById("ClickIt").addEventListener("click", myFunction;)
+	        document.getElementById("ClickIt").addEventListener("click", myFunction)
 	        //onclick="dodaj()"
 	        function dodaj() {
 	            let liczba1=parseInt(document.getElementById("liczba1").value);
